Fix mysterious horizontal scrollbar

--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -14,6 +14,7 @@ body {
   font-size: 14px;
   line-height: 1.6em;
   margin-bottom: 115px;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, .page-title {
